# CMakeListDemo

./: README.md
simplestCmakeDemo/: main.cpp  makefile
simplestCmakeWithGtes/: CMakeLists.txt
simplestCmakeWithGtes/myapp/: CMakeLists.txt  main.cpp
simplestCmakeWithGtes/mylibs/: CMakeLists.txt  mylib.cpp  mylib.h
simplestCmakeWithGtes/test/: CMakeLists.txt  test_add.cpp
simplestCmakeWithLibrary/: CMakeLists.txt
simplestCmakeWithLibrary/myapp/: main.cpp
simplestCmakeWithLibrary/mylibs/: mylib.cpp  mylib.h
